# katha

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/katha/: __init__.py  cli.py  models.py  report.py
src/katha/generator/: __init__.py  characters.py  morals.py  narrator.py
src/katha/stories/: __init__.py  mahabharata.py  puranas.py  ramayana.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_katha.py
